Style header bar temperature; remove fixed width from main footer so that horizontal scrolling does not happen on smaller devices

--- a/src/style.css
+++ b/src/style.css
@@ -60,15 +60,6 @@ body {
     height: auto;
 }
 
-.navbar-light .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1.00%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
-
-.navbar-light .navbar-toggler {
-    margin: 5px;
-    border: 1px solid whitesmoke;
-}
-
 .wrapper {
     display: grid;
     grid-template-columns: repeat(12, [col-start] 1fr);
@@ -81,7 +72,6 @@ body {
     color: var(--color-white);
     text-transform: uppercase;
 }
-
 .nav-link {
     font: var(--font-main-nav);
     padding-bottom: 20px;
@@ -107,13 +97,45 @@ body {
 .navbar-light .navbar-nav .show > .nav-link:hover {
     color: var(--color-usf-secondary);
 }
+/* MAIN NAVBAR TOGGLER ICON COLOR */
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1.00%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+/* MAIN NAVBAR TOGGLER ICON OUTLINE COLOR */
+.navbar-light .navbar-toggler {
+    margin: 5px;
+    border: 1px solid whitesmoke;
+}
 .main-head {
     grid-column: col-start / -1;
     grid-row: 1 / 2;
 }
+.header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-bar__end {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-bar__end--temperature {
+    font-weight: var(--fontWeight-semibold);
+}
 .main-footer {
+    display: flex;
+    flex-direction: column;
     background-color: var(--color-usf-secondary);
-    padding: 2px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    
+}
+.main-footer__copyright {
+    padding: 3px;
 }
 .ad-container {
     background-color: lightgray;
@@ -132,7 +154,7 @@ body {
 }
 .main-footer__logo-container {
     display: flex;
-    width: 30rem;
+    width: 100%;
     justify-content: space-around;
     align-items: center;
 }
@@ -219,10 +241,13 @@ a:focus {
         border-bottom: 0;
     }
     .header-bar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0.7rem;
+        padding: 0.5rem;
+    }
+    .header-bar__end {
+        flex-direction: column;
+    }
+    .header-bar__end--temperature {
+        font-size: var(--fontSize-0);
     }
     .main-nav {
         grid-column: col-start / -1;
@@ -283,9 +308,7 @@ a:focus {
         display: none;
     }
     .main-footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        grid-row: 6;
         grid-column: col-start / -1;
     }
 }
@@ -360,26 +383,14 @@ a:focus {
         font-size: var(--fontSize-1);
     }
     .main-footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         grid-column: col-start 3 / -1;
         grid-row: 5;
-        padding: 10px
     }
     nav ul {
         flex-direction: column;
     }
     .header-bar {
-        display: flex;
-        justify-content: space-between;
-        padding: 1.2rem;
-    }
-    .header-bar__end {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 14rem;
+        padding: 1rem;
     }
 }
   
